--- a/src/css/main.css
+++ b/src/css/main.css
@@ -172,7 +172,7 @@ and (-webkit-min-device-pixel-ratio: 1){
         grid-row-gap: 0px;
         text-align: center;
 
-        display: none;
+        /* display: none; */
     }  
     #titleCU { grid-area: 1 / 2 / 2 / 3; }
     #backCU { 
