--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,19 +62,19 @@ and (-webkit-min-device-pixel-ratio: 1){
     }
 
     /* PROBANDO 
-    container 
-      .container{
-        display: grid;
+    container */
+    .container{
+        display: flex;
         place-items: center;
         align-items: center;
         position: absolute; 
         top: 50%;
         right: 50%;
         transform: translate(50%, -50%); 
-     }
-     */
+        
+        columns: 210px 9;
+     }  
     
-
     /* MainScreen */
     #mainScreen {
         display: grid;
@@ -84,7 +84,7 @@ and (-webkit-min-device-pixel-ratio: 1){
         grid-row-gap: 0px;
         text-align: center;
         
-        /* display: none; */
+        display: none;
     }  
     
     #gameName { grid-area: 2 / 2 / 3 / 5; }
@@ -124,7 +124,7 @@ and (-webkit-min-device-pixel-ratio: 1){
         grid-row-gap: 0px;
         text-align: center;
 
-        display: none;
+        /* display: none; */
     }
     #aboutUs .logo{ grid-area: 1 / 2 / 2 / 3; }
     #titleAU { grid-area: 1 / 3 / 2 / 8; }
