--- a/src/css/main.css
+++ b/src/css/main.css
@@ -124,7 +124,7 @@ and (-webkit-min-device-pixel-ratio: 1){
         grid-row-gap: 0px;
         text-align: center;
 
-        /* display: none; */
+        display: none;
     }
     #aboutUs .logo{ grid-area: 1 / 2 / 2 / 3; }
     #titleAU { grid-area: 1 / 3 / 2 / 8; }
@@ -172,7 +172,7 @@ and (-webkit-min-device-pixel-ratio: 1){
         grid-row-gap: 0px;
         text-align: center;
 
-        display: none;
+        /* display: none; */
     }  
     #titleCU { grid-area: 1 / 2 / 2 / 3; }
     #backCU { 
@@ -386,11 +386,29 @@ and (-webkit-min-device-pixel-ratio: 1){
     }
 }
 
+/* Estilo para tablet en horizontal*/
+@media only screen 
+and (min-device-width: 933px)
+and (min-device-height: 431px)
+and (max-device-width: 1366px)
+and (max-device-height: 1024px)
+and (-webkit-min-device-pixel-ratio: 1){
+    body{
+        background-color: green;
+    }
+}
 
-
-
-
-
+/* Estilo para tablet en vertical*/
+@media only screen 
+and (min-device-width: 431px)
+and (min-device-height: 933px)
+and (max-device-width: 1024px)
+and (max-device-height: 1366px)
+and (-webkit-min-device-pixel-ratio: 1){
+    body{
+        background-color: blue;
+    }
+}
 
 
 
