--- a/src/css/main.css
+++ b/src/css/main.css
@@ -384,6 +384,20 @@ and (-webkit-min-device-pixel-ratio: 1){
     #messageA{
         font-size: 20px;
     }
+  
+}
+
+
+#div1escena{
+    width: 10%;
+}
+
+#div2escena{
+    width: 80%;
+}
+
+#div3escena{
+    width: 10%;
 }
 
 
