--- a/src/css/main.css
+++ b/src/css/main.css
@@ -390,14 +390,30 @@ and (-webkit-min-device-pixel-ratio: 1){
 
 #div1escena{
     width: 10%;
+    position: absolute;
+    top: 50%;
+    left: 90%;
 }
 
 #div2escena{
     width: 80%;
+    position: absolute;
+    top: 90%;
+    left: 50%;
 }
 
 #div3escena{
     width: 10%;
+    position: absolute;
+    top: 50%;
+    left: 10%;
+}
+
+#div4escena{
+    width: 10%;
+    position: absolute;
+    top: 10%;
+    left: 50%;
 }
 
 
