--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,8 +35,8 @@ body{
 }
 
 .back{
-    background: whitesmoke;
-    border: 1px solid whitesmoke;
+    background: transparent;
+    border: 0px transparent;
     width: 48px;
     height: 48px;
     padding: 0%;
@@ -342,8 +342,8 @@ and (-webkit-min-device-pixel-ratio: 1){
     }
 
     .back{
-        background: whitesmoke;
-        border: 1px solid whitesmoke;
+        background: transparent;
+        border: 0px transparent;
         width: 48px;
         height: 48px;
         padding: 0%;
